force-app/main/default/objects/Salesforce_Bypass_Trigger_Actions__c/Salesforce_Bypass_Trigger_Actions__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Salesforce Bypass Trigger Actions</label>
</CustomObject>