force-app/main/default/objects/Salesforce_Bypass_Trigger_Actions__c/fields/Bypass_Delete__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Delete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bypass Delete</label>
    <type>Checkbox</type>
</CustomField>