force-app/main/default/objects/Salesforce_Bypass_Trigger_Actions__c/fields/Bypass_Update__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bypass Update</label>
    <type>Checkbox</type>
</CustomField>